Header, photos and device support
Added Header
Added photo
Added support for multiple devices

--- a/index.html
+++ b/index.html
@@ -7,64 +7,70 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="main-text">
-            <!--Name title ascii art-->
-            <div class="title">
-            <p>
-                <pre> 
-  _____          _   _ _____ ______ _      ______   ____   ____  _____   _____         _   _ _____ 
- |  __ \   /\   | \ | |_   _|  ____| |    |  ____| |  _ \ / __ \|  __ \ / ____|  /\   | \ | |_   _|
- | |  | | /  \  |  \| | | | | |__  | |    | |__    | |_) | |  | | |__) | (___   /  \  |  \| | | |  
- | |  | |/ /\ \ | . ` | | | |  __| | |    |  __|   |  _ <| |  | |  _  / \___ \ / /\ \ | . ` | | |  
- | |__| / ____ \| |\  |_| |_| |____| |____| |____  | |_) | |__| | | \ \ ____) / ____ \| |\  |_| |_ 
- |_____/_/    \_\_| \_|_____|______|______|______| |____/ \____/|_|  \_\_____/_/    \_\_| \_|_____|                                                                                                                      
-                </pre>
-            </p>
-            </div>
-            <br>
-            <p>
-                I should write here my description
-            </p>
-            <br><br><br><br>
-            <div class="fullscreen-ascii-image">
-                <p>
-                    <pre>
-                                                 @@@@@@    @@%                                     
-                                        #@@@@@*,@      *@@@@@    @@@.                               
-                                   @@@#        .        @@@@         /@@&                           
-                               &@@                        @@             ,@@.                       
-                            &@@                                              @@*                    
-                          @@                                                    @@                  
-                        @@                                                        @@                
-                       @(                                                           @@              
-                      @#                                                             #@             
-                     @@                                                               @@            
-                     @%                                                               @@            
-                    @@                                                                @@            
-                    @&                                                                @@            
-                  @@*                                                                 @@            
-                 @@@ @@@@@@@/            .@@@*%@ @&                                   @/            
-                %@@   @@@@@ @*   @@    @@       #@#@@                                ,@             
-                 @@&  @@    ,@  @@@   @@         (   .@@                             @@             
-                 @@@        @@ @@@   &@          #      @.                           @              
-                 @@&       @@  @@@   @@          (      @&                          @@              
-               .@@#       @  @.  @@  @@                #@                           @               
-               @@@      *@  @*    @@  @@               @%                          @@               
-               @ @@@(/@@@ @@       /@(  @@@          ,@(                          @@                
-              @@          @#  @@&    @@     ,@@@@@@@@                            @@                 
-               @@&&@@%    @@  @@@    *@                         @ /@@@@         @@                  
-                       @@   @@@@@@/&@@                    %@@  *@@@@    /@@@  ,@                    
-                       #@                            @@          @@(         @@.                    
-                      %@     *@                     @@            @/                                
-                      @@.   @@ #@      (      @@*#@.              %                                 
-                       .@(@&@    @,   @ *@@@  @                   #                                 
-                        *@@@@    #                                #                                 
-                          ,@     *                                ,                                 
-                                 *                                                                  
-                    </pre>
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <pre>
+    <div class="background">
+      <div class="header">
+        <!--Name title ascii art-->
+        <div class="title">
+          <p>
+              <pre> 
+ _____          _   _ _____ ______ _      ______   ____   ____  _____   _____         _   _ _____ 
+|  __ \   /\   | \ | |_   _|  ____| |    |  ____| |  _ \ / __ \|  __ \ / ____|  /\   | \ | |_   _|
+| |  | | /  \  |  \| | | | | |__  | |    | |__    | |_) | |  | | |__) | (___   /  \  |  \| | | |  
+| |  | |/ /\ \ | . ` | | | |  __| | |    |  __|   |  _ <| |  | |  _  / \___ \ / /\ \ | . ` | | |  
+| |__| / ____ \| |\  |_| |_| |____| |____| |____  | |_) | |__| | | \ \ ____) / ____ \| |\  |_| |_ 
+|_____/_/    \_\_| \_|_____|______|______|______| |____/ \____/|_|  \_\_____/_/    \_\_| \_|_____|                                                                                                                      
+              </pre>
+          </p>
+          </div>
+        <p>test</p>
+      </div>
+
+      <div class="main-text">
+        <img src="images/Photo_website_base.jpg" alt="super cool image of me" style="width: 100%; height: auto; object-fit: cover;">
+          
+          <br><br>
+          <p>
+              I should write here my description
+          </p>
+          <br><br><br><br>
+          <div class="fullscreen-ascii-image">
+              <p>
+                  <pre>
+                                                @@@@@@    @@%                                     
+                                      #@@@@@*,@      *@@@@@    @@@.                               
+                                  @@@#        .        @@@@         /@@&                           
+                              &@@                        @@             ,@@.                       
+                          &@@                                              @@*                    
+                        @@                                                    @@                  
+                      @@                                                        @@                
+                      @(                                                           @@              
+                    @#                                                             #@             
+                    @@                                                               @@            
+                    @%                                                               @@            
+                  @@                                                                @@            
+                  @&                                                                @@            
+                @@*                                                                 @@            
+                @@@ @@@@@@@/            .@@@*%@ @&                                   @/            
+              %@@   @@@@@ @*   @@    @@       #@#@@                                ,@             
+                @@&  @@    ,@  @@@   @@         (   .@@                             @@             
+                @@@        @@ @@@   &@          #      @.                           @              
+                @@&       @@  @@@   @@          (      @&                          @@              
+              .@@#       @  @.  @@  @@                #@                           @               
+              @@@      *@  @*    @@  @@               @%                          @@               
+              @ @@@(/@@@ @@       /@(  @@@          ,@(                          @@                
+            @@          @#  @@&    @@     ,@@@@@@@@                            @@                 
+              @@&&@@%    @@  @@@    *@                         @ /@@@@         @@                  
+                      @@   @@@@@@/&@@                    %@@  *@@@@    /@@@  ,@                    
+                      #@                            @@          @@(         @@.                    
+                    %@     *@                     @@            @/                                
+                    @@.   @@ #@      (      @@*#@.              %                                 
+                      .@(@&@    @,   @ *@@@  @                   #                                 
+                      *@@@@    #                                #                                 
+                        ,@     *                                ,                                 
+                                *                                                                  
+                  </pre>
+                  <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                  <pre>
 &&&&%%&#%%%%%&%&&&&#&&(&%%%%%%&&&&&&@..,,,..,,..,,..,., ,,,,,,,,,,...,      ,,,,,,,,, .,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.,,.,,,,,,,,,,,,,,,,,,,,,,,,,,,,.,      . ,,,,,,,,,,,,,.., ,.,.,  ,,,..,.., ..,.    
 &&&&&&%&%&&&%&&&&&&&&%&%&&&  .,,,,,,,.,.,,,,.,..  ...,.,,,,,*,,,,,,..,,,,,,,,,,,,,,,,,,.,,,,,,,,,,,,,,,,,,,,,,,,,,,, ,.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,       .,,,,,,,,,,,,,,,,,...,,,.,,,.,,.,,,,,,.     
 &&&&%%&&(%&%%&&&&&&&/.,,,,,,,,,,,.,,,,,,,,, ,     ,...,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.  ,,,,,,,,,,,,,,,,,,,,,,,,,..,,,,.,,,,,,,,,,,,,,,,,,,,,,,,,, ,,,,    .  .,,,,,,,,,,,,,,      .,,.,,,,.,,,,,,,       
@@ -76,7 +82,7 @@
 ,,.     ....,,,,,,.,,,,,,,.  .,,,,,,,..                   . ,,*,*,,,,,,,,,,,,,,,,,,,,,,&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&(.. ,,,,,,,,,,  ,,,,,,,,,,,,,,,..,...,,,,       .,,,,,,,,,,,..  ,,,.,,,,,*.,
 ,,,,,,  . ..,,,,,,,,,,,.     .,,,,,,. ...,              .....*,,,,,,,**,*,*,,,,*,,%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@*,,,,,,,, ,,,,,,,,,,,,,,,, .,.,,,,,,. ,,,,,,,,,,,,,,.      ,,,,,***/***
 ,,.,,,,,,,        .,,,,      .,,,,,,.,,,,.              .   **,*,,,,,,******,,@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%*,, ,,,,.,,,,,,,,,,,,  ..,., ,,,,,,,,,,,,,,..          ,,,,,.&&&&&&
-  ,,,,,,,,,         ,,       .,,,,... ,,,..             .*,*,,,*,***,,*,,*#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&*,,,,,,,,,,,,,,,.      ,,,,,,,,,,,,,,,,,,            &&&&&&&&&&&&
+,,,,,,,,,         ,,       .,,,,... ,,,..             .*,*,,,*,***,,*,,*#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&*,,,,,,,,,,,,,,,.      ,,,,,,,,,,,,,,,,,,            &&&&&&&&&&&&
 ,,,*,*///*.                  .,,,,,,...,,, ..       ,,,,,,,,,,,,,,/*,,,&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@,,,,,,,,,,,,,    ,,,,,,,,,,,,,,,,,,,,.     . *&%(#%&&&&&&&&&&&
 ,,,,*,/**,.                  .,,,,,,. ,,,,  ,.    ,,,,,,,,,,,,,,,*,,%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&,,,,,,,,     .,,,,,,.,,,,,,,,,,,,,,,  (@&&&&&&&&&&&&&(&&&&&&
 ,,,,,,,,,,.                  .,,,,,,.,,,,,   ,   ,,,,,,,,,,(*,**,,&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&*,,      ,,.,,,,,,.,,,,,,,,,,,,,,,,,.&&(%&&&&&&&&@,&&&&&&&
@@ -88,7 +94,7 @@
 ,,,,,,,,,,.                  .,,,,,,.,,,,,,,,   .,,*,,,.&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@&&&&&&&&&&&&&&&&&&&&&@&&&&&&%(,,*.,%&&&&&@  *@&&&&,,,,,,/,,,./&(,*&&@&%%&@&&&&&&&&&#*,,**,,.,
 ,,,,,,,,,,.                   ,,,,,,,,,,,,,,,,,.,,,**,,&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&/&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&.,*,,.&&&%&&#%&&&&&&&&#,,,*.,,,,,,,.@&&&&&&&&&&&&&&&&&,,,,,,,,,,
 ,,.,,,,,,,.                  .,,,,,,..,,,,,,,,,,.,.**,,@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@&&&%#@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&#,,,,,,.&&%&&&#&&&&&&&&&,,,,,,,,,,,,, &&&/&&&&&&&&&&&&,,,,,,,,,,,
-  .,.,,,,..                  .,,,,  .,,,., ,,,,,,,,,./,@&/&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&,&&&&,&&&&&&&#&&&&&&&&&&&&&&&&&&&&&&&&.,,,,,..,.%&&&%&&&&&&&&.,,,,,,,,,,,,,%%#&&&&&&&&&&&&&&&**,****.&&
+.,.,,,,..                  .,,,,  .,,,., ,,,,,,,,,./,@&/&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&,&&&&,&&&&&&&#&&&&&&&&&&&&&&&&&&&&&&&&.,,,,,..,.%&&&%&&&&&&&&.,,,,,,,,,,,,,%%#&&&&&&&&&&&&&&&**,****.&&
 ,,,,,......                  .,,,,,,,,.,.. ,, .,,,.,#(#&&&&&&&&&&&&&&&&&&%@&&&&&&&&&&&&&&&&&&#@%@&&&&,&&&&&&.@&&&&&&&&&&&&&&&&&&%&&&&,%,,,,,,,,, &&&&%&&&@(.,,,,,,,,,,,,.,*%&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,.........                  .,,,,,,...,,,,   .,,,,,.% (&&@&&&&&&&&&&&&&&@@&&&&&&&&&@#%&%&&%%&&&&&&&@%&&&&&@@&&&&&&&&&&&&&&&&&&&@* ,,,,.,,,,. @&&&&&@%%/.,,,,,,,,,,,,,.%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,.........                  .,,,,,,,...,,     .,.,,., %&#&&&&&&&&&&*&&&&&%&&&@,@&&&&(.,,,,,,,.&&&&&&/@&&&&&&&&&&&&&&&&&&&&&@ /,,,,.,,.*,,.&&&&&/*@/.,,,,,,,,,,,,,, @%&&&&&&&&&&&&&&&&&&&%&&%%%%&&&&&&&&
@@ -99,7 +105,7 @@
 ,, ,...,,.,                  .,,,,,,,,,,,.,,,,,,,,.,,,,./@.,,,,,,***,@&&@&&&&&&&&@,,,,,,,,,,,,,,,,,,,*&&&&&&@&&&@@&&&&&&&&&&&&% ,,,,,,,,.,,,,,,,,,,,.@&&@&&&&&&.,,,,(&&&&&&&&&&%%&&%%%%%%%%%%%%%%%%%%%%%
 ,, . ....,.                  .,,,,,,,,,,,,,,,,,,,,,,,,,,,,(&.,,,,,,(&&&&&&&&&&&#&&&,.&,,,,,,,,,,,***&&&&&&&&&&&&@&&&&&&&&&* ,,,,,,,,,,,,,,,,,,,,,,,/&&&&&&&&&%,,,,,/&&&&&&&&&%%&%%%%%%%%%%%%%%%%%%%%%%%%
 ,, ....,,,                   .,,,,,,,,.,,,,,,,,,,,,,,,,,,,,,/,,,**%%%..&&@*&&&&&&&@%&&@@,,,,,,,&.@&&%%%&&&&&&&&&&&&&&&&..,,,,,,,,,,,,,,,,,,,,,,,,,,,&&&&&&&&@,,,,,,&&%&&&&&&%%&&&%%%%%%%%%%%%%%%%%%%%%%%
- . . ...,,.                  .,,,. . ,,,.,,,,,,.,,,,,,,,,,,,,*,/,/,/&,#,,*@&&#&&&&&&&&&&&&&&&&&&&&&&.&&&&&&&&&&&&&&& ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,%&&&&&@.,,,,,,&&&&@&&%%%&&&%%%%%%%%%%%%%%%%%%%%%%%&
+. . ...,,.                  .,,,. . ,,,.,,,,,,.,,,,,,,,,,,,,*,/,/,/&,#,,*@&&#&&&&&&&&&&&&&&&&&&&&&&.&&&&&&&&&&&&&&& ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,%&&&&&@.,,,,,,&&&&@&&%%%&&&%%%%%%%%%%%%%%%%%%%%%%%&
 ., ....,...            .     .,,,.,, ,,,,,,,,,,,,,.,,,,,,,,,.&,&,*,#@,(,,,,,,@&&&&&@/&&&&&&&&&&&&@//@&&&&&&&&&&&&# ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.&&&&&&@,,,,,,,.&&&%&%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%&&
 ,,...,,.,..                    ,,,,,,,,,,,,,,,,,,,,.,,,,,,,,,@@&@&@&&/,,,,,,,,,,&&&/&&&&&&&&&&&&&&&&&&&&&&&&&&&@ ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,@&&&&%,,,.,,,,,,&%%%%%&&%%%%%%%%%%%%%%%%%%%&&&&&&&&&&
 ,,,,,.,.,..                        ,,,,,,,,,,,,,,,.,,,,,,,,,,&&(@&&&&@%,.,,,,,,,,,/&@&&&&&&&&&%&&&&&&&&&&&&&&&@.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.&%%#%#%%%%%%%%%%%%%%%%%%%&&&&&&&&&&&&&
@@ -111,9 +117,9 @@
 .,,,..,,,,,,,,,,,,,,,,,               ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,(&&&@&&&&&&&&&&&,&&&&&&&&&(&&&(.,,,,,,,,*&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%&%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,,,,.,,,,,,,,,,,,,,,,,,..,         ,,,,,,,,,,,,,,,,,,,,,,,.,,,,,,,,,,,%&&&&&&&&&&&&&&&&&&&&((,(&&&.&&@,.,,,,,,,*&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,..,,,,,,,,,     ,,,,,.,,,,,..   .,,,,,,,,,,&@&&&&&&,,,,,,,,,. ,,,,,,,&&&&&&%%@/%%,(&&&&&&.&&&,(&&*,.,.,,,,,,,,,,.&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&%%&%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-  ,,,,,,,,,           ,,,,,,,,,,,,  ,.%@&&&@&&&&&&&&&&&&&&&&&&&&&,,,,,,,#@&&*&&&*&&&(&&&*&&(#&.,,,,,.,...,,,,,,,,,.&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+,,,,,,,,,           ,,,,,,,,,,,,  ,.%@&&&@&&&&&&&&&&&&&&&&&&&&&,,,,,,,#@&&*&&&*&&&(&&&*&&(#&.,,,,,.,...,,,,,,,,,.&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,,,,,,,..               .,,./@&&&&&&&&&&&&&&&&&&&&&& &&&&&&&&% ,,,,,,,,,@&&/&&&&@&&%@&&/,..,.,,,,,,,,,,,,,,,,,,,.@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%&%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-  .,,,,,            /%@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& ,,,.,,,,.  .. ,,,.@&&,@&&%.&*%#.%,,,..,,,.&&&@.,,,,,,,,,.@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+.,,,,,            /%@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& ,,,.,,,,.  .. ,,,.@&&,@&&%.&*%#.%,,,..,,,.&&&@.,,,,,,,,,.@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,,, ,         .(&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&&&&&&&&&&&&&&&&&,,,,,,,*,,,,,,,,,,,,,,.(&&&&&&&&&#.../&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,,,,    .    %&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@ ,,,,,,,,,,,,,,,.@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ,.,,,*(.  &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&&&&@, .,.. ,@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%&%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
@@ -123,12 +129,12 @@
 ,,**/(@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 ***,/@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 **,*&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
- .@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+.@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%&%%%&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%%%%%&&&&&
-                    </pre>
-                </p>
-            </div>
-        </div>
+                  </pre>
+              </p>
+          </div>
+      </div>
     </div>
 </body>
 </html>
