--- a/linktree.html
+++ b/linktree.html
@@ -3,9 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Linktree</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ignore this for now, it's only a test</h1>
+    <div class="background">
+        <div class="centered-list">
+            <h3 style="display: grid; justify-content: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><u>LINKTREE</u></h3>
+            <br><br>
+            <a href="#" class="button" target="_blank">
+                <div class="boxed">
+                    <div class="center-items">
+                        <img src="images/Social-media/Logos/discord_logo.png" alt="img" style="height:20px; float:left; padding:1px;">
+                        <img src="images/Social-media/discord_profiloPicture.png" alt="img" style="height:20px; float:left; padding:1px;">
+                        <p style="float: right;">&ensp; Discord: traponsix</p>
+                    </div>
+                </div>
+            </a>
+            <br>
+            <a href="https://www.instagram.com/random_noncreative_human/" class="button" target="_blank">
+                <div class="boxed">
+                    <div class="center-items">
+                        <img src="images/Social-media/Logos/Instagram_logo.png" alt="img" style="height:20px; float:left; padding:1px;">
+                        <img src="images/Social-media/instagram_profilePicture.jpg" alt="img" style="height:20px; float:left; padding:1px;">
+                        <p style="float: right;">&ensp; Instagram: random_noncreative_human</p>
+                    </div>
+                </div>
+            </a>
+            <br>
+            <a href="https://www.instagram.com/daniele_borsani/" class="button" target="_blank">
+                <div class="boxed">
+                    <div class="center-items">
+                        <img src="images/Social-media/Logos/Instagram_logo.png" alt="img" style="height:20px; float:left; padding:1px;">
+                        <img src="images/Social-media/instagram_personal_profilePicture.jpg" alt="img" style="height:20px; float:left; padding:1px;">
+                        <p style="float: right;">&ensp; Personal Instagram: daniele_borsani</p>
+                    </div>
+                </div>
+            </a>
+            <br>
+            <a href="https://t.me/traponsix" class="button" target="_blank">
+                <div class="boxed">
+                    <div class="center-items">
+                        <img src="images/Social-media/Logos/telegram_logo.png" alt="img" style="height:20px; float:left; padding:1px;">
+                        <img src="images/Social-media/telegram_profilePicture.jpg" alt="img" style="height:20px; float:left; padding:1px;">
+                        <p style="float: right;">&ensp; telegram: @traponsix</p>
+                    </div>
+                </div>
+            </a>
+            <br>
+            <a href="mailto:daniele77b04@gmail.com?body=If you send this email without deleting this you're an idiot" class="button" target="_blank">
+                <div class="boxed">
+                    <div class="center-items">
+                        <img src="images/Social-media/Logos/gmail_logo.png" alt="img" style="height:20px; float:left; padding:1px;">
+                        <p style="float: right;">&ensp; Email: daniele77b04@gmail.com</p>
+                    </div>
+                </div>
+            </a>
+            <br><br><br>
+            <a href="index.html" class="button">
+                <div class="boxed">
+                    <div class="center-items">
+                        <h3 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">-- HOME PAGE --</h3>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    
+    <div class="header">
+        <!--Name title ascii art-->
+        <div class="title">
+          <p>
+              <pre> 
+ _____          _   _ _____ ______ _      ______   ____   ____  _____   _____         _   _ _____ 
+|  __ \   /\   | \ | |_   _|  ____| |    |  ____| |  _ \ / __ \|  __ \ / ____|  /\   | \ | |_   _|
+| |  | | /  \  |  \| | | | | |__  | |    | |__    | |_) | |  | | |__) | (___   /  \  |  \| | | |  
+| |  | |/ /\ \ | . ` | | | |  __| | |    |  __|   |  _ <| |  | |  _  / \___ \ / /\ \ | . ` | | |  
+| |__| / ____ \| |\  |_| |_| |____| |____| |____  | |_) | |__| | | \ \ ____) / ____ \| |\  |_| |_ 
+|_____/_/    \_\_| \_|_____|______|______|______| |____/ \____/|_|  \_\_____/_/    \_\_| \_|_____|                                                                                                                      
+              </pre>
+          </p>
+          </div>
+
+      </div>
 </body>
 </html>
