--- a/index.html
+++ b/index.html
@@ -293,12 +293,14 @@
             </p>
         </div>
         <div class="actual-test">
-            <div class="div1"><p>test</p></div>
-            <div class="div2"><p>test</p></div>
-            <div class="div3"><p>test</p></div>
+            <div class="div1"><p></p></div>
+            <div class="div2"><p></p></div>
+            <div class="div3"><p></p></div>
         </div>
         <div class="main-text">
-            <p>test</p>
+            <h1>My way of work</h1>
+            <br>
+            <p>Exploring creativity and art in new ways, I blend innovation with quality to create solutions that are visually engaging, useful, and fully adaptable to any need or environment.</p>
         </div>
     </div>
     
