--- a/gwallet.html
+++ b/gwallet.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Wallet</title>
 </head>
-<body>
-    <div style="height: 100vh;
+<body style="overflow: hidden;">
+    <div style="
+    height: 100vh;
+    width: 100vw;
+    background-color: #F7F7E7;
     display: grid;
     justify-content: center;
-    background-color: #F7F7E7;
     align-items: center;">
     
         <img src="images/green_wallet.png" alt="green wallet" style="width:100%; max-height: 100%;">
