--- a/gwallet.html
+++ b/gwallet.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Wallet</title>
 </head>
-<body style="overflow: hidden;">
+<body style="overflow: hidden; background-color: #F7F7E7;">
     <div style="
-    height: 100vh;
-    width: 100vw;
-    background-color: #F7F7E7;
+    height: 100%;
+    width: 100%;
     display: grid;
     justify-content: center;
     align-items: center;">
